--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <h1>Enzo Souza Felix</h1>
     <h1>Contatos</h1>
     <p>Enzo_felix1234@hotmail.com</p>
+    <p>+55 21 972038775</p>
     <h2>Objetivo</h2>
     <ul>
-    <li>Estágio na area de TI</li>   
+    <li>Estágio na área de programação</li>   
 
     </ul>
     <h2>Conhecimentos</h2>
     <ul>
         <li>Programação em linguagem c</li>
-        <li>HTML</li>
+        <li>HTML5</li>
+        <li>Rede de computadores</li>
         <li>Inglês Básico</li>
         <li>Espanhol Básico</li>
     </ul>
