--- a/index.html
+++ b/index.html
@@ -2,31 +2,37 @@
 <html>
 <head>
 <title>Curriculo</title>
+<style>
+    body {background-color:darkgreen;}
+h1   {color:skyblue;}
+li    {color: silver;}
+b     {color:silver}    
+    </style>
 </head>
 <body>
     
     
     <h1>Enzo Souza Felix</h1>
     <h1>Contatos</h1>
-    <p>Enzo_felix1234@hotmail.com</p>
-    <p>+55 21 972038775</p>
-    <h2>Objetivo</h2>
+    <p><b>Enzo_felix1234@hotmail.com</b></p>
+    <p><b>+55 21 972038775</b></p>
+    <h1>Objetivo</h1>
     <ul>
-    <li>Estágio na área de programação</li>   
+    <li><b>Estágio na área de programação</b></li>   
 
     </ul>
-    <h1>Conhecimentos</h2>
+    <h1>Conhecimentos</h1>
     <ul>
-        <li>Programação em linguagem c</li>
-        <li>HTML5</li>
-        <li>Rede de computadores</li>
-        <li>Inglês Básico</li>
-        <li>Espanhol Básico</li>
+        <li><b>Programação em linguagem c</b></li>
+        <li><b>HTML5</b></li>
+        <li><b>Rede de computadores</b></li>
+        <li><b>Inglês Básico</b></li>
+        <li><b>Espanhol Básico</b></li>
     </ul>
-    <h1>Formaçâo Acadêmica</h2>
+    <h1>Formaçâo Acadêmica</h1>
     <ul>
-    <li>Ensino medio completo</li>
-    <li>Cursando SI(Sistemas de Informação)</li>    
+    <li><b>Ensino médio completo</b></li>
+    <li><b>Cursando Sistemas de Informação(1º Período)</b></li>    
     </ul>        
 </body>
 </html>
