--- a/curriculo.html
+++ b/curriculo.html
@@ -4,9 +4,9 @@
 <title>Curriculo</title>
 <style>
     body {background-color:darkgreen;}
-h1   {color:skyblue;}
-li    {color: silver;}
-b     {color:silver}    
+h1   {color:black;}
+li    {color: black;}
+b     {color:black;}    
     </style>
 </head>
 <body>
